@@ -1,3 +1,7 @@
+2018-11-12 Li Jianfeng <lee_jianfeng@sjtu.edu.cn>
+
+		* rename function format_filenames params 'prefix>suffix;profix>prefix'
+
 2018-03-10 Li Jianfeng <lee_jianfeng@sjtu.edu.cn>
 
 		* add ANNOVAR create_index.pl in inst/extdata/tools/annovar
